--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 body {
   margin: 0;
   font-family:"Poppins",sans-serif ;
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing:grayscale;
   background-color: aquamarine;
   height: 100%;
+}
+code {
+  font-family: source-code-pro,Menlo,Monaco,Consolas,'Courier New',monospace;
 }
